# true-tech-hack-2025

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
ai_json_generator/: __main__.py
ai_json_generator/adapters/mws/: client.py  config.py  di.py
ai_json_generator/domain/entities/mws/: model.py
ai_json_generator/domain/interfaces/mws/: client.py
ai_json_generator/presentors/rest/: config.py  factory.py
ai_json_generator/presentors/rest/api/: router.py
ai_json_generator/presentors/rest/api/v1/: router.py
ai_json_generator/presentors/rest/api/v1/chat/: router.py
ai_json_generator/presentors/rest/api/v1/models/: router.py
ai_json_generator/shared/: logging.py
